# github-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/github_agent/: __init__.py  agent.py  cli.py  github_client.py  tools.py
src/github_pr_agent/: __init__.py  agent.py  cli.py  config.py  github_client.py  tools.py
tests/: conftest.py  test_agent.py
